[package]
name = "ml-model-tracker-rpc"
version = "0.0.1"
authors = ["Matthew Dean"]
edition = "2018"
license = 'Unlicense'

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0" }
jsonrpc-core = "14.0.3"
jsonrpc-core-client = "14.0.3"
jsonrpc-derive = "14.0.3"
serde = { version = "1.0.101", features = ["derive"], optional = true }

[dependencies.sp-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc5'
version = '2.0.0-rc5'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc5'
version = '2.0.0-rc5'

[dependencies.sp-rpc]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc5'
version = '2.0.0-rc5'

[dependencies.sp-blockchain]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc5'
version = '2.0.0-rc5'

[dependencies.ml-model-tracker-runtime-api]
path = "../runtime-api"
default-features = false
version = '0.0.1'

[features]
default = ["std"]
std = [
  "serde",
  "sp-runtime/std",
  "sp-api/std",
  "ml-model-tracker-runtime-api/std"
]
